CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(asio_http_server)

MESSAGE(STATUS "System: " ${CMAKE_SYSTEM_NAME} " " ${CMAKE_SYSTEM_VERSION})
MESSAGE(STATUS "Processor: " ${CMAKE_HOST_SYSTEM_PROCESSOR})

set( CMAKE_VERBOSE_MAKEFILE ON )

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Debug")
endif()

set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -fno-inline")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g -DNDEBUG")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++14")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

if (WITH_ADDRESS_SANITIZER)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
endif()

#paths
set(ASIO_SERVER_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(ASIO_SERVER_INCLUDE ${ASIO_SERVER_ROOT}/asio_server)
set(ASIO_SERVER_BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR})
set(ASIO_SERVER_BIN ${ASIO_SERVER_BUILD_ROOT}/bin)
set(ASIO_SERVER_LIB ${ASIO_SERVER_BUILD_ROOT}/lib)

INCLUDE_DIRECTORIES(BEFORE
   ${PROJECT_SOURCE_DIR})
   
INCLUDE_DIRECTORIES(BEFORE
   ${PROJECT_SOURCE_DIR}/include)

#options
option (BUILD_SAMPLES "Build examples." TRUE)
option (BUILD_TESTS "Build tests" TRUE)

#dependencies
find_package(Boost REQUIRED COMPONENTS thread filesystem system)
find_package(Glog REQUIRED)

if (WITH_JEMALLOC)
    find_package(Jemalloc REQUIRED)
endif()

if (BUILD_SAMPLES)
    add_subdirectory(samples)
endif()

if (BUILD_TESTS)
    add_subdirectory(tests)
endif()

ADD_SUBDIRECTORY(src)

FILE(READ "VERSION" VERSION)
STRING(REPLACE "\n" "" PROJECT_VERSION ${VERSION})

# split major, minor and revision
STRING(REGEX REPLACE "([0-9]+)[.]([0-9]+)[.](.*)$" "\\1" PROJECT_VERSION_MAJOR ${PROJECT_VERSION})
STRING(REGEX REPLACE "([0-9]+)[.]([0-9]+)[.](.*)$" "\\2" PROJECT_VERSION_MINOR ${PROJECT_VERSION})
STRING(REGEX REPLACE "([0-9]+)[.]([0-9]+)[.](.*)$" "\\3" PROJECT_VERSION_REVISION ${PROJECT_VERSION})

# CPack
SET(CPACK_PACKAGE_NAME "asio_server")
SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_REVISION})
SET(CPACK_BINARY_DEB "ON")
SET(CPACK_BINARY_RPM "OFF")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_VENDOR "unknown")
SET(CPACK_PACKAGE_CONTACT griha@jigit.ru)
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER griha)
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "/tmp")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "asio server with one event loop per thread")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
set(CPACK_SET_DESTDIR true)
set(CPACK_INSTALL_PREFIX /opt/asio)

INCLUDE(CPack)


